	
	FIM NEWS -- history of main user-visible changes in FIM.

                Version 0.6-trunk

# (r1921)
 * fimgs: bunzip2, wget, and xz are now optional.
# (r1918)
 * Bugfix: fimgs to properly remove temporary directory after loading downloaded files.
# (r1903)
 * Misc small improvements in text output and reporting (no cursor in post-search output line; misc messages).
 * Key 'Z' now assigned to 'sleep 1'.
# (r1910)
 * Key 'Del' now assigned to 'list "remove"'.
# (r1900)
 * Add -= as short form of the --no-auto-scale option.
# (r1898-r1901)
 * Experimental: add command "crop", also activated after selecting the area by holding Shift and clicking with left mouse button (if running with -o sdl).
# (r1890)
 * Add command "pan 'vsteps%' 'hsteps%'" and "'pan 'vsteps' 'hsteps'".
# (r1880)
 * Keys F1,F2,F3,F4,F5,F6,F7,F8,F9,F10,F11,F12 are now usable with 'bind' in with modes -o aa, -o ca, -o dumb.
# (r1878)
 * Fix for -o sdl: when flipped or mirrored was drawing a smaller box by mistake.
# (r1876)
 * Only filenames matching "^[/A-Za-z0-9_.][/A-Za-z0-9_.-]*$" can occur in a conversion command involving an external program.
# (r1875)
 * --pread-cmd=command  substitutes any occurrence of '{}' in command with the actual filename, executes the result and reads an image from its stdout.
# (r1834)
 * -o fb=S will not tolerate running under screen.
# (r1832)
 * Bugfix in --script-from-stdin preventing possible crashes.
# (r1816)
 * Removed configure options --enable-c++11 -- use CXXFLAGS instead.
# (r1784,r1801)
 * Bugfix: 'autocmd_del' with no arguments would crash.
# (r1781)
 * Bugfix: Autocommand "PostHardcodedConfigLoading" will now trigger even execute even if --disable-fimrc .
# (r1771-r1773,r1776-r1777,r1781,r1783-r1785,r1789,r1792-r1796,r1803-r1806,r1808-r1809,r1813-r1815,r1818,r1822-r1823,r1827,r1831-r1836,r1839-r1930)
 * internal: considerably expanded 'make tests'.
# (r1770,r1772)
 * Add command 'stderr', similar to 'stdout'.
# (r1739,TODO)